# operator

./: .gitignore  CHANGES.md  HACKING.md  pyproject.toml  tox.ini
.github/actions/update-charm-pins/: action.yaml  main.py
.github/workflows/: charmcraft-pack.yaml  db-charm-tests.yaml  framework-tests.yaml  hello-charm-tests.yaml  integration.yaml  observability-charm-tests.yaml  publish-ops-tracing.yaml  smoke.yaml  temp-ops-tracing-ci.yaml  test-publish-ops-tracing.yaml  tiobe.yaml  update-charm-tests.yaml
docs/: conf.py  index.md  requirements.txt
docs/explanation/: index.md  state-transition-testing.md  tracing.rst
docs/howto/: manage-relations.md  write-unit-tests-for-a-charm.md
dont-merge/: fake-charm.py  readme.md  send-traces.py
dummy-charm/: start
ops/: __init__.py  _main.py  _tracing.py  charm.py  framework.py  log.py  model.py  pebble.py  storage.py  version.py
ops/_private/: yaml.py
ops/_tracing/: __init__.py  api.py  buffer.py  export.py  fixme.py  hacks.py
ops/tracing/: __init__.py  _buffer.py  _fixme.py
test/: test_main_invocation.py  test_main_type_hint.py  test_secret_by_id.py
test/fixme_charm/test/: conftest.py  test_nothing.py  test_storage.py
test/integration/: conftest.py  test_secrets.py
test_integration/: conftest.py  test_smoke.py  test_tracing.py
test_ops/: test_framework.py  test_model.py  test_pebble.py  test_storage.py
test_testing/benchmark/: test_testing.py
test_testing/test_e2e/: test_relations.py  test_secrets.py  test_state.py  test_stored_state.py
test_tracing/: conftest.py  test_api.py  test_backend.py  test_storage.py
testing/: pyproject.toml
testing/src/scenario/: _runtime.py  mocking.py
testing/tests/: test_context_on.py  test_emitted_events_util.py
testing/tests/test_e2e/: test_deferred.py
tracing/: pyproject.toml
tracing/ops_tracing/: __init__.py  _api.py  _backend.py  _buffer.py  _export.py  api.py  backend.py  buffer.py  const.py  export.py
tracing/test/: conftest.py  test_storage.py
