[project]
name = "ops-scenario"
version = "7.3.0.dev0"
authors = [
    { name = "Pietro Pasotti", email = "pietro.pasotti@canonical.com" }
]
maintainers = [
    { name = "The Charm Tech team at Canonical Ltd." }
]
description = "Python library providing a state-transition testing API for Operator Framework charms."
license.text = "Apache-2.0"
keywords = ["juju", "test"]
dependencies = [
    "ops==2.20.0.dev0",
    "PyYAML>=6.0.1",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Quality Assurance',
    'Topic :: Software Development :: Testing',
    'Topic :: Utilities',
]

[project.urls]
"Homepage" = "https://github.com/canonical/operator"
"Bug Tracker" = "https://github.com/canonical/operator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[bdist_wheel]
universal = 1
